FIX: try to fix logo on iphone navbar

--- a/src/styles/components/_mobileNavbar.scss
+++ b/src/styles/components/_mobileNavbar.scss
@@ -1,27 +1,26 @@
 @import "../variables";
 
-
-.mobile-navbar-container{
-    position: fixed;
-    z-index: 40;
-    width: 100vw;
-    height: 10vh;
-    color:$backgroun_color2;
-    font-size: 30px;
-    background-color: rgba($color: #000000, $alpha: 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.mobile-navbar-container {
+  position: fixed;
+  z-index: 40;
+  width: 100vw;
+  height: 10vh;
+  color: $backgroun_color2;
+  font-size: 30px;
+  background-color: rgba($color: #000000, $alpha: 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.mobile-navbar-logo-container{
-    margin-left: 2%;
-    height: 65%;
-  
+.mobile-navbar-logo-container {
+  margin-left: 2%;
+  height: 65%;
 
-    img{
-        width: 100%;
-        object-fit: cover;
-        opacity: 0.7;
-    }
+  img {
+    width: 100%;
+    //object-fit: cover;
+    height: 100%;
+    opacity: 0.7;
+  }
 }
